<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".app.module.register.Register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/anima"
        android:textSize="40sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:textColor="@color/secondaryTextColor" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:text="@string/register_message"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="10sp"
        android:minLines="1"
        android:maxLines="1"
        android:background="@drawable/edittext_bg"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="16sp"
        android:padding="10sp"
        android:minLines="1"
        android:maxLines="1"
        android:background="@drawable/edittext_bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="16sp"
        android:padding="10sp"
        android:minLines="1"
        android:maxLines="1"
        android:background="@drawable/edittext_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginTop="16sp"
        android:padding="10sp"
        android:minLines="1"
        android:maxLines="1"
        android:background="@drawable/edittext_bg"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:autofillHints="" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40sp"
        android:layout_marginRight="40sp"
        android:layout_marginTop="16sp"
        android:text="@string/register"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/secondaryTextColor" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:textSize="16sp"
        android:text="@string/already_registered" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        android:visibility="invisible" />

</LinearLayout>