<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:text="Licenzas"
            android:textColor="@color/secondaryTextColor"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/yourName"
            android:layout_height="wrap_content"
            android:layout_marginRight="20sp"
            android:layout_marginLeft="20sp"
            android:layout_marginTop="10sp"
            android:text="Licenzas de librerías de terceiros"
            android:layout_width="match_parent"
            android:textSize="28sp" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:text="Picasso"
            android:textStyle="bold"
            android:textColor="@color/secondaryTextColor" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:text="@string/picasso" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:text="Butter Knife"
            android:textStyle="bold"
            android:textColor="@color/secondaryTextColor" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:text="@string/butterknife" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:text="FlexboxLayout"
            android:textStyle="bold"
            android:textColor="@color/secondaryTextColor" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="20sp"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:text="@string/flexbox" />
    </LinearLayout>
</ScrollView>